Some issues with my repo, Updated to Karim's Repo

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "AngularSPA": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -98,5 +102,6 @@
         }
       }
     }
-  }
+  },
+  "defaultProject": "AngularSPA"
 }
